--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -46,82 +46,44 @@ collections:
               widget: "hidden",
               default: "index-page",
             }
-          - { label: Before Title, name: beforetitle, widget: string }
-          - { label: Title, name: title, widget: string }
-          - { label: Sub-title, name: subtitle, widget: string }
-          - { label: Short Description, name: shortdesc, widget: text }
-          - { label: Heading, name: heading, widget: string }
-          - { label: Subheading, name: subheading, widget: string }
           - {
-              label: Mainpitch,
-              name: mainpitch,
-              widget: object,
-              fields:
-                [
-                  { label: Title, name: title, widget: string },
-                  { label: Description, name: description, widget: text },
-                ],
-            }
-          - { label: Description, name: description, widget: string }
-          - {
-              label: Intro,
-              name: intro,
-              widget: object,
-              fields:
-                [
-                  { label: Heading, name: heading, widget: string },
-                  { label: Description, name: description, widget: text },
-                  {
-                    label: Blurbs,
-                    name: blurbs,
-                    widget: list,
-                    fields:
-                      [
-                        { label: Image, name: image, widget: image },
-                        { label: Text, name: text, widget: text },
-                      ],
-                  },
-                ],
+            label: Landing Section,
+            name: landingsection,
+            widget: object,
+            fields:
+              [
+                { label: Before Title, name: beforetitle, widget: string },
+                { label: Title, name: title, widget: string },
+                { label: Sub-title, name: subtitle, widget: string },
+                { label: Short Description, name: shortdesc, widget: text },
+              ],
             }
           - {
-              label: Main,
-              name: main,
-              widget: object,
-              fields:
-                [
-                  { label: Heading, name: heading, widget: string },
-                  { label: Description, name: description, widget: text },
-                  {
-                    label: Image1,
-                    name: image1,
-                    widget: object,
-                    fields:
-                      [
-                        { label: Image, name: image, widget: image },
-                        { label: Alt, name: alt, widget: string },
-                      ],
-                  },
-                  {
-                    label: Image2,
-                    name: image2,
-                    widget: object,
-                    fields:
-                      [
-                        { label: Image, name: image, widget: image },
-                        { label: Alt, name: alt, widget: string },
-                      ],
-                  },
-                  {
-                    label: Image3,
-                    name: image3,
-                    widget: object,
-                    fields:
-                      [
-                        { label: Image, name: image, widget: image },
-                        { label: Alt, name: alt, widget: string },
-                      ],
-                  },
-                ],
+            label: About Section,
+            name: about,
+            widget: object,
+            fields:
+              [
+                { label: Description, name: description, widget: text },
+                {
+                  label: Tech Stacks,
+                  name: techstacks,
+                  widget: list,
+                  fields:
+                    [
+                      { label: Tech Stack Name, name: techstackname , widget: string },
+                      {
+                        label: Stack,
+                        name: stack,
+                        widget: list,
+                        fields:
+                          [
+                            { label: Stack Name, name: stackname, widget: string },
+                          ],
+                      },
+                    ],
+                },
+              ],
             }
       - file: "src/pages/about/index.md"
         label: "About"
