--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "install": "^0.13.0",
     "lodash": "^4.17.15",
     "lodash-webpack-plugin": "^0.11.4",
+    "markdown-to-jsx": "^7.1.7",
     "netlify-cms-app": "^2.15.65",
     "netlify-cms-media-library-cloudinary": "^1.3.10",
     "netlify-cms-media-library-uploadcare": "^0.5.10",
