--- a/package.json
+++ b/package.json
@@ -31,7 +31,10 @@
     "react": "^17.0.0",
     "react-dom": "^17.0.0",
     "react-helmet": "^6.0.0",
+    "react-transition-group": "^4.4.5",
     "sass": "^1.43.2",
+    "scrollreveal": "^4.0.9",
+    "styled-components": "^5.3.5",
     "uuid": "^8.0.0"
   },
   "keywords": [
